# Wolfenstein-3D

./: .buildconfig  .gitignore  CMakeLists.txt  Devolucion  Doxyfile  Makefile  README.md  ServerMain  Wolfenstein3D.cbp  WolfensteinTest  fetchmaps.sh  install.sh  serverMain.cpp
client/: CMakeLists.txt  Makefile  README.md  raycastinglord  raycastingtest  sdl-static  sdl-wall
client/Lua/: script.lua
client/Wolfen3D_autogen/4LWPZUJSRY/: moc_create_window.cpp  moc_join_window.cpp  moc_login.cpp  moc_match_id.cpp
client/Wolfen3D_autogen/include/: ui_join_window.h
client/YAMLConfig/: screenDimensions.yaml
client/audio/: audiolist.txt
client/executable/: CMakeCache.txt  Login  Makefile  Wolfen3D  cmake_install.cmake  log.txt  lua  raycastinglord  raycastingtest  sdl-events  sdl-hello  sdl-static  sdl-wall
client/executable/Login_autogen/4LWPZUJSRY/: moc_login.cpp
client/executable/Wolfen3D_autogen/: mocs_compilation.cpp
client/executable/Wolfen3D_autogen/4LWPZUJSRY/: moc_create_window.cpp  moc_join_window.cpp  moc_match_id.cpp
client/executable/Wolfen3D_autogen/include/: ui_create_window.h  ui_join_window.h
client/executable/Wolfen3D_autogen/include/Login_autogen/include/: ui_login.h
client/executable/lua-5.4.2/src/: luac
client/executable/lua_autogen/: moc_predefs.h
client/includes/: ClientMapLoader.h  Game.h  HudAnimations.h  RaycastedAnimation.h  area.h  audiomanager.h  client.h  clientprotocol.h  commandexecuter.h  commandmanager.h  commandsender.h  configReader.h  door.h  doortile.h  drawable.h  drawablevector.h  fileloader.h  hud.h  log.h  player.h  playermap.h  raycaster.h  scoreboard.h  sdlexception.h  sdlwindow.h  sound.h  startingscreen.h  texturemanager.h
client/media/: imglist.txt
client/src/: ClientMapLoader.cpp  ClientMapLoader.h  Game.cpp  HudAnimations.cpp  RaycastedAnimation.cpp  RaycastedAnimation.h  anglemanager.cpp  anglemanager.h  area.cpp  area.h  audio.cpp  audio.h  audiomanager.cpp  audiomanager.h  client.cpp  client.h  clientprotocol.h  commandexecuter.cpp  commandexecuter.h  commandsender.cpp  commandsender.h  configReader.cpp  door.cpp  door.h  doortile.cpp  doortile.h  doortimer.cpp  doortimer.h  drawable.cpp  drawable.h  drawablevector.cpp  explosion.cpp  explosion.h  fileloader.cpp  hud.cpp  hud.h  log.cpp  log.h  luasender.cpp  luasender.h  (+25 more)
client/src/Login/: CMakeLists.txt  Login  create_window.cpp  create_window.h  create_window.ui  join_window.cpp  join_window.h  join_window.ui  login.cpp  login.h  login.ui  main.cpp  match_id.cpp  match_id.h
client/src/Login/Login_autogen/: mocs_compilation.cpp
client/src/Login/Login_autogen/EWIEGA46WW/: moc_create_window.cpp  moc_join_window.cpp  moc_login.cpp
client/src/Lua/: GameState.cpp  GameState.h  LuaClient.cpp  LuaClient.h  lua_main.cpp  luaexecuter.cpp  luaexecuter.h  luaraycaster.cpp  luaraycaster.h  luasender.cpp  luasender.h  script.lua
client/src/build-Login-my_pc-Debug/: build.ninja  rules.ninja
client/src/build-Login-my_pc-Debug/.cmake/api/v1/reply/: cache-v2-edae7f5d6dc930821ca2.json  cmakeFiles-v1-a211274ffa40ef27ee67.json  cmakeFiles-v1-f1a7d6e8cafe11b1304a.json  codemodel-v2-dcdc517fa97c09c13eca.json  codemodel-v2-f6bc6633970aee2f2daa.json  index-2021-02-08T05-46-05-0316.json  index-2021-02-09T17-13-16-0311.json  target-Login-Debug-e83c6490a37bc8458894.json  target-Login-Debug-eeb6c1305824f36c3f12.json  (+1 more)
client/src/build-Login-my_pc-Debug/Login_autogen/: mocs_compilation.cpp
client/src/build-Login-my_pc-Debug/Login_autogen/EWIEGA46WW/: moc_match_id.cpp
client/src/build-Login-my_pc-Debug/Login_autogen/include/: ui_create_window.h
qt/editor/: .YAML  123.YAML  CMakeLists.txt  PathFactory.cpp  PathFactory.h  YAMLConversor.cpp  YAMLConversor.h  decoration_container.cpp  decoration_container.h  decoration_tile.cpp  decoration_tile.h  decoration_tile_factory.cpp  decoration_tile_factory.h  decoration_tile_pattern.h  door_container.cpp  door_tile.cpp  door_tile.h  door_tile_factory.cpp  door_tile_factory.h  doors_tile_pattern.h  editor  editor.cbp  editor.cpp  editor.h  editor.pro  editor.ui  empty_tile_container.cpp  fake_wall_tile_factory.cpp  fake_wall_tile_factory.h  images.qrc  item_container.cpp  item_tile.cpp  item_tile.h  item_tile_factory.cpp  item_tile_factory.h  items_tile_pattern.h  joala.YAML  map1.YAML  map_actions.cpp  map_actions.h  (+63 more)
qt/editor/.cmake/api/v1/reply/: cache-v2-4c4c8a77191bbc0d8bbc.json  cache-v2-6cd815fd3d45b589b358.json  cache-v2-da2a0f4b8252e6a7cb15.json  cache-v2-dcac511103f4e2b38b7f.json  cmakeFiles-v1-0e1b5966eef2b2e9cd96.json  cmakeFiles-v1-2f0aa7b6112baa4235aa.json  cmakeFiles-v1-69f25686d1e99f98a6c4.json  cmakeFiles-v1-c7de8f92e4792747bcc0.json  codemodel-v2-105aa45809ff2706bf37.json  codemodel-v2-6fca53faaeb45cd67ce5.json  codemodel-v2-95d4245fff12c59dfd3b.json  codemodel-v2-f2d6c9bc6c1779027aa4.json  codemodel-v2-ff7338a5b4bf0f1adabf.json  index-2021-02-08T02-39-19-0900.json  index-2021-02-08T23-00-55-0669.json  index-2021-02-10T19-42-35-0069.json  index-2021-02-17T19-51-41-0464.json  index-2021-02-22T21-15-35-0328.json  target-editor-597d14822f62c7a0d653.json  target-editor-b1cd072c6a06c1af4691.json  target-editor-b60acd14b63d92925cef.json  target-editor-d1a4371b2621ca380396.json  target-editor-e75e989841fdbdc5900a.json  target-editor_autogen-1d1f8f1a4f06b2ab32df.json
qt/editor/editor_autogen/: mocs_compilation.cpp
qt/editor/editor_autogen/EWIEGA46WW/: moc_editor.cpp  moc_map_actions.cpp  moc_map_save.cpp  moc_map_scene.cpp  moc_mousetileactions.cpp  moc_open_window.cpp  moc_save_window.cpp  moc_size_window.cpp  moc_tile_container_actions.cpp  moc_tile_item.cpp
qt/editor/editor_autogen/include/: ui_editor.h  ui_open_window.h  ui_save_window.h  ui_size_window.h
qt/editor/maps/: .yaml  1.yaml  111.YAML  123.yaml  4.YAML  789.yaml  barrilete_cosmico.YAML  borde.YAML  cuadrado.yaml  demostracion.yaml  esqueletos.YAML  mamarracho.YAML  map000.yaml  map1.YAML  map1.yaml  map123.yaml  map2.yaml  maps_names.txt  otro_nombre.YAML  piedad.YAML  piedraman.YAML  prueba.yaml  prueba2.yaml  sangre.YAML  sssss.yaml
(+1090 files in other folders)
